--- a/style.css
+++ b/style.css
@@ -38,6 +38,7 @@ button
     font-weight: bolder;
     background-color: black;
     color: orange;
+    border-radius: 3px;
     cursor: pointer;
 }
 
@@ -62,4 +63,17 @@ li
     font-weight: bolder;
     font-size: 16px;
     background-color: rgb(243, 243, 243);
+}
+
+.btn
+{
+    background-color: rgb(230, 14, 14);
+    color: black;
+    border-radius: 3px;
+    cursor: pointer;
+}
+
+.btn:hover
+{
+    background-color: rgb(5, 205, 5);
 }
